# moo-dl

./: Cargo.toml  README.md  example-config.yml
src/: downloader.rs  generate_config.rs  main.rs  status_bar.rs  sync.rs  update.rs
src/api/: assign_submission.rs  errors.rs  helpers.rs  login.rs  mod.rs  rest.rs  rest_api.rs
src/api/login/: from_params.rs  mod.rs
src/api/modules/: apiurl.rs  assign.rs  content_types.rs  feedback.rs  folder.rs  forum.rs  glossary.rs  grouptool.rs  hsuforum.rs  label.rs  lti.rs  mod.rs  page.rs  pdfannotator.rs  quiz.rs  resource.rs  url.rs  vpl.rs
src/api/rest_api/: course_modules.rs  mod.rs
src/api/rest_api/course_modules/: content_types.rs
src/config/: cli.rs  mod.rs  sync_config.rs
src/download/: mod.rs  raw_file.rs  request.rs  youtube.rs
src/download/chromium/: mod.rs  save_page.rs
src/download/minidav/: downloader.rs  mod.rs
src/download/youtube/: downloader.rs  mod.rs  queue.rs
src/login/: graphical.rs  mod.rs  rwth.rs  user_pass.rs
src/update/: mod.rs  raw_file.rs  timestamp.rs  youtube.rs
