[package]
name = "moo-dl"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "A next generation moodle sync client with a focus und speed and function."
readme = "README.md"
keywords = ["moodle"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Nathan-Mossaad/moo-dl"
repository = "https://github.com/Nathan-Mossaad/moo-dl"

[dependencies]
# Error handeling
anyhow = "1.0"

# Async
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
async-channel = "2.3"
futures = "0.3"

# Config
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
indicatif = "0.17"
tracing-indicatif = "0.3"
strip-ansi-escapes = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
percent-encoding = "2.3"

# Networking
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "stream",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "http2",
] }

# Login and browser
chromiumoxide = { version = "0.7", features = [
    "tokio-runtime",
], default-features = false }
web2pdf_lib = "0.1"
base64 = "0.22"
select = "0.6.0"
totp-rs = "5.6"
regex = "1.10"

# Time
chrono = "0.4"

# Performance
once_cell = "1.21"
